--- a/index.html
+++ b/index.html
@@ -59,31 +59,33 @@
             </p>
         </div>
     </div>
+    <!--Add alt tag description for images-->
 
     <!--Side Content Start-->
     <div class="benefits">
         <div class="benefit-lead">
             <h3>Lead Generation</h3>
-            <img src="./assets/images/lead-generation.png" alt=""/>
+            <img src="./assets/images/lead-generation.png" alt="" />
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
         </div>
         <div class="benefit-brand">
             <h3>Brand Awareness</h3>
-            <img src="./assets/images/brand-awareness.png" alt=""/>
+            <img src="./assets/images/brand-awareness.png" alt="" />
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
         </div>
         <div class="benefit-cost">
             <h3>Cost Management</h3>
-            <img src="./assets/images/cost-management.png" alt="">
+            <img src="./assets/images/cost-management.png" alt="" />
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
         </div>
     </div>
+    <!--Used quotations for alt tag in img due to the images provided were not specific enough. The images did not help in providing an explaination-->
     <!--Side Content End-->
 
     <!--Footer-->
